add Blog with posts

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta charset="utf-8">
-    <title>Fitness html5 landing page</title>
+    <title>FitZone</title>
+    <script src="https://kit.fontawesome.com/c89b3dabf2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/custom.css" />
